--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
   		<groupId>net.sf.json-lib</groupId>
   		<artifactId>json-lib</artifactId>
   		<version>2.2.3</version>
+  		<classifier>jdk15</classifier>
   	</dependency>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
