--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,21 @@
   <artifactId>project2017</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <build>
+  	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.3.2</version>
+			<configuration>
+				<source>1.8</source>
+				<target>1.8</target>
+			</configuration>
+		</plugin>
+  	</plugins>
+  </build>
+  
   <dependencies>
   	<dependency>
   		<groupId>mysql</groupId>
